# ld2016

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  build.bat  clean.bat  default.nix  generateMSVSProject.bat
cmake/: FindASSIMP.cmake
src/: CMakeLists.txt  main.cpp
src/assets/models/: pyramid_bottom.dae
src/common/: CMakeLists.txt  animatedObject.cpp  animatedObject.h  camera.cpp  camera.h  debug.cpp  debug.h  game.cpp  game.h  glError.h  loadCubeMap.cpp  loadCubeMap.h  meshObject.cpp  meshObject.h  perspectiveCamera.cpp  perspectiveCamera.h  scene.cpp  scene.h  sceneObject.cpp  sceneObject.h  shaderProgram.cpp  shaderProgram.h  shaders.cpp  shaders.h  skyBox.cpp  skyBox.h  transform.cpp  transform.h  transformRAII.cpp  transformRAII.h  transformStack.cpp  transformStack.h  wasdCamera.cpp  wasdCamera.h
src/common/assets/shaders/: billboard.frag  billboard.vert  billboardPoint.frag  billboardPoint.vert  gouraud.frag  gouraud.vert  phong.glsl  phong.vert  skyQuad.frag  skyQuad.vert  texture.frag  wireframe.vert
src/common/assets/shaders/glsl/: gouraud.vert  texture.frag  texture.vert
src/common/assets/shaders/webgl/: gouraud.vert
src/common/ecs/: CMakeLists.txt  README.md  ecsAutoGen.h  ecsComponents.cpp  ecsComponents.h  ecsHelpers.cpp  ecsState.h  ecsSystem.h  ecsSystem_controls.cpp  ecsSystem_controls.h  ecsSystem_movement.cpp  ecsSystem_movement.h  ecsSystem_wasdControls.cpp  ecsSystem_wasdControls.h
src/sandbox/: CMakeLists.txt
src/sandbox/animation/: CMakeLists.txt  main.cpp
src/sandbox/animation/assets/models/: cucumber.dae  human_strange.dae  pyramid_thruster_flames.dae  pyramid_thrusters.dae  pyramid_top.dae  sphere.dae
src/sandbox/audio/: CMakeLists.txt  main.cpp
src/sandbox/hello/: CMakeLists.txt  cameraOrbit.cpp  cameraOrbit.h  main.cpp  orbitCamera.cpp  orbitCamera.h
src/sandbox/hello/ecs/: CMakeLists.txt  KvMap.h  components.cpp  components.h  ecsAutoGen.h  ecsComponents.cpp  ecsComponents.h  ecsCoreAutoGen.h  ecsCoreAutoGenForEach.h  ecsDelegate.h  ecsHelpers.cpp  ecsHelpers.h  ecsKvMap.h  ecsState.cpp  ecsState.h  ecsSystem.h  ecsSystem_movement.cpp  ecsSystem_movement.h  ecsSystems.cpp  ecsSystems.h  gameState.cpp  gameState.h  metaEcs.h
src/sandbox/physics/: CMakeLists.txt  main.cpp
